Fixed Firefox nav bar wrap error
Increased width of nav at 405px breakpoint to prevent nav bar from wrapping at low window size

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -505,6 +505,10 @@ footer {
 }
 
 @media(max-width:405px) {
+    nav {
+        width: 92%;
+    }
+
     .navMenu a {
         margin-left: 0.28rem;
     }
